<resources>
    <string name="app_name">InventoryApp</string>
    <string name="enter_name">Enter name:</string>
    <string name="description">Description:</string>
    <string name="uid">UID:</string>
    <string name="quantity">Quantity:</string>
    <string name="save_item">Save Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="enter_login_details">Enter Login Details</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="create_account">Create Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_notifications">Stock notifications?</string>
    <string name="done">Done</string>
    <string name="create_user_title">Enter your account information</string>
    <string name="sms_notification_number">SMS notification number:</string>
</resources>